fix header spacing

--- a/packages/optimism.io/src/navigation/Navigation.module.css
+++ b/packages/optimism.io/src/navigation/Navigation.module.css
@@ -41,6 +41,9 @@
 
 
 .header {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 	padding-top: .5em;
 	padding-bottom: .5em;
 	background-color: transparent;
@@ -56,29 +59,4 @@
 
 
 
-
-@media (min-width: 769px) {
-	.header,
-	.mainNav {
-		display: flex;
-	}
-	.header {
-		flex-direction: column;
-		align-items: center;
-    	.header{
-		width: 80%;
-		margin: 0 auto;
-		max-width: 1150px;
-	}
-	}
-
-}
-
-@media (min-width: 1025px) {
-	.header {
-		flex-direction: row;
-		justify-content: space-between;
-	}
-
-}
 
